# ai-onboarding

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
ai/: retrieve.ipynb
airflow/: requirements.txt
airflow/dags/: dag_etl_pg_to_es.py
airflow/dags/gigahack/etl/: pg_to_es.py
airflow/src/core/: config.py  schema.py
airflow/src/extract/: postgres.py
airflow/src/load/: elastic.py
airflow/src/models/: base.py  qa_record.py
airflow/src/state/: base.py  redis.py
airflow/src/transform/: base.py  qa_record.py
backend/auth/: Dockerfile  requirements.txt  start.sh
backend/auth/module/models/: base.py
backend/auth/module/services/: jwt.py
backend/auth/src/: main.py
backend/auth/src/containers/: auth.py  jwt.py
backend/auth/src/core/: config.py
backend/auth/src/db/: user.py
backend/auth/src/models/: user.py
backend/auth/src/repositories/: base.py  user.py
backend/auth/src/services/: jwt.py  user.py
backend/es_initer/: Dockerfile  requirements.txt
backend/es_initer/mapping/: onboarding.json
backend/es_initer/src/: client.py  main.py  security_client.py
backend/es_initer/src/config/: base.py  logger.py
backend/onboarding_panel/: Dockerfile  requirements.txt  start.sh
backend/onboarding_panel/module/core/: config.py
backend/onboarding_panel/src/: main.py
backend/onboarding_panel/src/core/: config.py  (+1 more)
backend/pg_initer/: schema.sql
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js  App.scss  index.js  styles.scss
kibana/config/: kibana.yml
nginx/configs/: main.conf
(+41 files in other folders)
